--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
         \n\Le maillot Ichinan High et l'uniforme de gymnastique sont de couleur claire avec des rayures noires.
 
     </string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
 
 </resources>
